--- a/public_html/ke.html
+++ b/public_html/ke.html
@@ -32,7 +32,7 @@ I'm so sorry.
 		{
 			return "Yesterday at " + hour(d.getHours(), d.getMinutes(), d.getSeconds()) 
 		}
-		else return hour(d.getHours(), d.getMinutes())
+		else return hour(d.getHours(), d.getMinutes(), d.getSeconds())
 	}
       function createName(list, name, time){
         var username = "";
