--- a/public_html/ke.html
+++ b/public_html/ke.html
@@ -23,7 +23,7 @@ I'm so sorry.
 
 	function hour(hr, min, sec)
       {
-		return (hr * 3600 + min * 60 + sec)/864 + " Ke"
+		return Math.round((hr * 3600 + min * 60 + sec)/864) + " Ke"
 	  }
       function processDate(time) {
 		d = new Date(time)
