Fixed html entities

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -152,7 +152,7 @@ I'm so sorry.
         Ann Arbor, MI 48104<br/>
       </h3>
       <h3 class="channel-name">IRC: [#allhandsactive - irc.freenode.net]</h3>
-      <p>If you're in IRC, simply say <strong>@space</strong> to tell people you're at the space and <strong>@gone</strong> to tell people you're not at the space. Your position will expire after 24 hours.</p>
+      <p>If you're in IRC, simply say <strong>@<i>place</i></strong> to tell people you're somewhere and <strong>@gone</strong> to tell people you're gone. Your position will expire after 6 hours.</p>
       <h2>Who's where?</h3>
       <div class="result">
       </div>
